@@ -1,43 +1,44 @@
-##################################** Prequisites **#############################################
 
-	**Download .jar file for Burp Suite Pro from**
-		--> https://portswigger.net/burp/releases/download?product=pro&version=2021.7&type=Jar
-	**Download Burp Loader files. Then Follow Below Steps for Activation**
-		--> https://github.com/SNGWN/Burp-Loader/archive/main.zip
-	**If using in Windows 10, Download and Install Java and JDK**
-		**For Java** --> https://javadl.oracle.com/webapps/download/AutoDL?BundleId=244068_89d678f2be164786b292527658ca1605
-		**For JDK**  --> https://www.oracle.com/in/java/technologies/javase-jdk15-downloads.html
 
-##################################** Execution and Activation **################################
+--------------------------------------------------------------------------------------------
+# Burp Suite Professional Installation steps for Windows
+	--> Open Powershell and execute below command to set Script Execution Policy.
+		Set-ExecutionPolicy -ExecutionPolicy bypass -Scope process
+	--> Now Execute Windows_Setup.ps1 file in Powershell to Complete Installation.
+		./Windows_Setup.ps1
+	--> For Start Menu Entry, copy **Burp-Suite-Pro.vbs** file to 
+		C:\ProgramData\Microsoft\Windows\Start Menu\Programs\
+
+-----------------------------------------------------------------------------------------------------------------
+# Burp Suite Professional Installation steps for Kali-Linux 
+	--> Execute Kali_Linux_Setup.sh file as root user
+
+-----------------------------------------------------------------------------------------------------------------
+# Burp Suite Pro Activation Steps 
+	1. Modify License String like "license to Siddharth"
+	2. Copy License key from keygen.jar and paste in Burp Suite Pro and click Next.
+	3. Select Manual Activation Option on your bottom Right in Burp Suite Pro.
+	4. Copy License Request from BurpSuite_Pro and paste in Keygenerator.
+	5. Copy license response from Keygenerator and paste in Burp Suite Pro, then next and Done.
 	
-	**1. Place all files in 1 folder**
-		For Example lets take as --> C:\Users\Siddharth\Downloads\burp-suite\
-	----------------------------------------------
-	**2.1 Run This Command for Windows in CMD Prompt.**
-		java --illegal-access=permit -Dfile.encoding=utf-8 -javaagent:'C:\Users\siddh\Downloads\burp-suite\loader.jar' -noverify -jar 'C:\Users\Siddharth\Downloads\burp-suite\burpsuite_pro_v2021.2.1.jar'
-	**2.2 Run this command for Linux in Terminal. Suppose Your files are in /home/Siddharth/Downloads/burp-suite/**
-		java --illegal-access=permit -Dfile.encoding=utf-8 -javaagent:/home/Siddharth/Downloads/burp-suite/loader.jar -noverify -jar /home/Siddharth/Downloads/burp-suite/burpsuite_pro_v2021.2.1.jar
-	----------------------------------------------
-	**3. Use keygen.jar to generate the License key**
-		java -jar keygen.jar
-	----------------------------------------------
-	**4. Activate Burp Suite Pro**
-		1. Modify License String like "license to Siddharth"
-		2. Copy License key from keygen.jar and paste in Burp Suite Pro and click Next.
-		3. Select Manual Activation Option on your bottom Right in Burp Suite Pro.
-		4. Copy License Request from BurpSuite_Pro and paste in keygen.jar
-		5. Copy license response from keygen.jar and paste in BurpSuite_Pro, and next and Done
-	----------------------------------------------
-	**5.1 For Windows Follow These Steps**
-		1. Open Notepad and Paste command at 2.1 and save the file with name burp.bat in C:\Users\Siddharth\Downloads\burp-suite\   Folder.
-		2. Open another Notepad and Paste below command and save it with burp.VBS extension in Desktop.
-			-->	Set WshShell = CreateObject("WScript.Shell")
-			-->	WshShell.Run chr(34) & "C:\Users\Siddharth\Downloads\burp-suite\burp.bat" & Chr(34), 0
-			-->	Set WshShell = Nothing
-	**5.2 For Linux Follow these Steps**
-		1. With Sudo Permissions, Create a file with command "gedit /bin/burp"
-		2. Paste command in text editor "java --illegal-access=permit -Dfile.encoding=utf-8 -javaagent:/home/Siddharth/Downloads/burp-suite/loader.jar -noverify -jar /home/Siddharth/Downloads/burp-suite/burpsuite_pro_v2021.2.1.jar &"
-		3. Change Permissions for files with command "chmod +x /bin/burp"
-	----------------------------------------------
-	**6.1 For Executing Burp in Windows, Double Click on burp.VBS file.**
-	**6.2 For Executing Burp in Linux, Write burp in Terminal and press Enter.**
+-----------------------------------------------------------------------------------------------------------------
+# Executing Burp Suite Profession after Activation
+	--> Windows :-: You can start Burp Suite Professional from Start Menu.
+	--> Kali Linux :-: You can start Burp Suite Professional by writing **burp** in terminal.
+
+-----------------------------------------------------------------------------------------------------------------
+# Updating Burp Suite Professional
+	--> Replace existing Burp-Suite-Pro.jar file with latest Burp Suite Professional jar file. 
+
+-----------------------------------------------------------------------------------------------------------------
+# Videos For further Reference 	
+	--> Installing Burp Suite Professional in Kali Linux for Free
+[![Installing Burp Suite Professional in Kali Linux for Free](https://img.youtube.com/vi/N0KQrk77BBo/0.jpg)](https://www.youtube.com/watch?v=N0KQrk77BBo)
+
+
+	--> Introduction to Burp Suite Professionaal
+[![Introduction to Burp Suite Professional -- Beginner to Intermediate](https://img.youtube.com/vi/L5euJM2Hxrg/0.jpg)](https://www.youtube.com/watch?v=L5euJM2Hxrg)
+
+
+	--> Burp Suite Configuration for Android Applications and SSL Pinning Bypass.
+[![Burp Suite Configuration for Android Applications and SSL Pinning Bypass.](https://img.youtube.com/vi/1721lyUtfYY/0.jpg)](https://www.youtube.com/watch?v=1721lyUtfYY)
